# openvpn_meson

./: CMakePresets.json  Dockerfile  README.meson.md  build_clean_comparison.ps1  build_iterative_comparison.ps1  config.h.meson.in  meson.build  meson.options  version.h.in
src/openvpn/: tun.h
src/openvpnmsica/: meson.build
src/openvpnserv/: meson.build
src/tapctl/: meson.build
subprojects/: cmocka.wrap  openssl.wrap
subprojects/packagefiles/: openssl-ms-files.patch
tests/unit_tests/openvpn/: test_crypto.c
